# upnp-present

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  ContentPickerPage.qml  DebugPage.qml  ErrorDialog.qml  MainPage.qml  upnp-present.qml
cmake/: FindIntltool.cmake
data/: CMakeLists.txt  manifest.json.in  upnp-present.apparmor  upnp-present.content  upnp-present.desktop.in
po/: CMakeLists.txt  POTFILES.in.in  upnp-present.pot
src/: CMakeLists.txt  control-point-model.cpp  control-point-model.h  gobj_memory.h  media-renderer.cpp  media-renderer.h  test.qml
src/upnp/: CMakeLists.txt  collect-dependencies.sh  context.cpp  context.h  control-point-model.cpp  control-point-model.h  media-renderer.cpp  media-renderer.h  plugin.cpp  plugin.h  protocol-info.cpp  protocol-info.h  qmldir  utils.cpp  utils.h  web-resource.cpp  web-resource.h
